# unitn-sde

./: .env.example  README.md  common.py  compose.yaml  main.py  pyproject.toml  test.py
examples/: assignment.py  example1.py  example2.py  example3.py  exercise1.py  exercise2.py  exercise3.py  test.py
grafana/datasources/: influxdb.yaml
grafana/plugins/: kafka.yaml
lab4/: test.py
lab4/assignment/: _assignment.py  assignent.py  assignment.py
lab4/examples/: example1.py  example2.py  example3.py  webcam_producer.py
lab4/exercises/: exercise1.py  exercise2.py  exercise3.py
src/: cpu.py  jpeg.py  memory.py  ram.py
telegraf/: kafka.conf
